This file documents the revision history for the Monitoring Webinterface Thruk.


0.52    Fri Mar 19 20:11:48 CET 2010
          - added text dates like 'tomorrow' or '-3 weeks' for all date input fields
          - fixed menu scrollbar
          - fixed nav hider on main.html
          - fixed parsing dates
          - fixed filter combination "livestatus: Cannot combine 2 filters with 'OR': only 0 are on stack"

0.50    Fri Mar 19 20:11:48 CET 2010
          - added next/last check filter
          - backends can be enabled in extinfo 1/2
          - added start_page config option
          - reload counter resets when host/service is selected
          - different date format for today (only HH:MM:SS for example)
          - added sample pnp ssi
          - fixed navbar

0.48    Thu Mar 18 20:32:39 CET 2010
          - changed navbar show/hide
          - added !~ filter
          - fixed themes

0.46    Wed Mar 17 21:47:57 CET 2010
          - default state of command checkboxes can be configured
          - cgi.cfg will be reloaded if changed ( without restarting )
          - backends can be setup with initial hidden state
          - fixed problem with paths
          - fixed 'check all' link for hostdetails
          - fixed problem with umlauts in comments

0.44    Fri Mar 12 17:31:10 CET 2010
          - added server side includes

0.42    Fri Mar 12 17:31:10 CET 2010
          - changed datepicker
          - fixed problem with sorting empty results
          - fixed host/service totals when using complex filters

0.40    Sun Mar  7 21:12:37 CET 2010
          - change status.cgi filter inline
          - combine several filter
          - strict authorization option

0.34    Wed Mar  3 09:40:49 CET 2010
          - send multiple commands from status detail
          - date picker for logfile pages (history, showlog and notifications)
          - overlib for long plugin out in status details
          - added new theme Nuvola
